--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
     box-sizing: border-box;
 }
 
-.timetable {
+/*.timetable {
     display: grid;
     grid-template-areas: ". week" "time content";
     grid-template-columns: 120px;
@@ -18,29 +18,40 @@ html, body {
     margin-left: auto;
     margin-right: auto;
 }
-
+*/
 .container-timetable {
-    margin-top: 150px;
+    width: 100%;
+    background: white;
+    padding: 20px 20px 20px 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.container-maxwidth {
+    padding-top: 150px;
 }
 
 .container {
     flex: 1;
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #45526e;
-    color: white;
     display: flex;
-    height: auto;
-    justify-content: center; /* Center align content horizontally */
+    justify-content: center;
+    align-items: center;
+}
 
+.container-custom {
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+div #container {
+    max-width: 1500px !important;
 }
 
 
-.timetable .accent-pink-gradient {
+.accent-pink-gradient {
     display: flex;
     width: 100%;
     height: 100%;
@@ -48,12 +59,12 @@ html, body {
     transition: 0.2s ease box-shadow, 0.2s ease transform;
 }
 
-.timetable .accent-pink-gradient:hover {
+.accent-pink-gradient:hover {
     box-shadow: 0 20px 30px 0 rgba(238, 142, 188, 0.3);
     transform: scale(1.05);
 }
 
-.timetable .accent-orange-gradient {
+.accent-orange-gradient {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -64,12 +75,12 @@ html, body {
     position: relative;
 }
 
-.timetable .accent-orange-gradient:hover {
+.accent-orange-gradient:hover {
     box-shadow: 0 20px 30px 0 rgba(238, 192, 142, 0.3);
     transform: scale(1.05);
 }
 
-.timetable .accent-green-gradient {
+.accent-green-gradient {
     display: flex;
     width: 100%;
     height: 100%;
@@ -80,12 +91,12 @@ html, body {
     position: relative;
 }
 
-.timetable .accent-green-gradient:hover {
+.accent-green-gradient:hover {
     box-shadow: 0 20px 30px 0 rgba(188, 238, 142, 0.3);
     transform: scale(1.05);
 }
 
-.timetable .accent-cyan-gradient {
+.accent-cyan-gradient {
     display: flex;
     width: 100%;
     height: 100%;
@@ -96,12 +107,12 @@ html, body {
     position: relative;
 }
 
-.timetable .accent-cyan-gradient:hover {
+.accent-cyan-gradient:hover {
     box-shadow: 0 20px 30px 0 rgba(142, 238, 192, 0.3);
     transform: scale(1.05);
 }
 
-.timetable .accent-blue-gradient {
+.accent-blue-gradient {
     display: flex;
     width: 100%;
     height: 100%;
@@ -112,12 +123,12 @@ html, body {
     position: relative;
 }
 
-.timetable .accent-blue-gradient:hover {
+.accent-blue-gradient:hover {
     box-shadow: 0 20px 30px 0 rgba(142, 188, 238, 0.3);
     transform: scale(1.05);
 }
 
-.timetable .accent-purple-gradient {
+.accent-purple-gradient {
     display: flex;
     width: 100%;
     height: 100%;
@@ -128,7 +139,7 @@ html, body {
     position: relative;
 }
 
-.timetable .accent-purple-gradient:hover {
+.accent-purple-gradient:hover {
     box-shadow: 0 20px 30px 0 rgba(192, 142, 238, 0.3);
     transform: scale(1.05);
 }
@@ -508,6 +519,7 @@ svg {
 table {
     caption-side: bottom;
     border-collapse: collapse;
+
 }
 
 caption {
@@ -2193,8 +2205,10 @@ progress {
     margin-bottom: 1rem;
     color: var(--bs-table-color);
     vertical-align: top;
-    border-color: var(--bs-table-border-color);
+    border: 1px solid #e3e3e3;
+
 }
+
 
 .table > :not(caption) > * > * {
     padding: 0.5rem 0.5rem;
@@ -2228,8 +2242,9 @@ progress {
 }
 
 .table-bordered > :not(caption) > * > * {
-    border-width: 0 1px;
+    border-width: 1px 1px;
 }
+
 
 .table-borderless > :not(caption) > * > * {
     border-bottom-width: 0;
@@ -12630,7 +12645,5 @@ button:focus {
 p .text-custom-size {
     font-size: 20px !important;
 }
-
-
 
 
