--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -1,116 +1,69 @@
-.timetable {
-    display: grid;
-    grid-template-areas: ". week" "time content";
-    grid-template-columns: 120px;
-    grid-template-rows: 60px;
-    width: 100vw;
-    height: 100vh;
-}
-.timetable .accent-pink-gradient {
-    display: flex;
-    width: 100%;
+.accent-pink-gradient,
+.accent-cyan-gradient,
+.accent-orange-gradient,
+.accent-green-gradient,
+.accent-blue-gradient,
+.accent-purple-gradient {
     height: 100%;
-    background: linear-gradient(135deg, #ee8ebc, #eea08e);
     transition: 0.2s ease box-shadow, 0.2s ease transform;
 }
-.timetable .accent-pink-gradient:hover {
+
+.accent-pink-gradient {
+    background: red;
+}
+
+.accent-pink-gradient:hover {
+    background: red;
     box-shadow: 0 20px 30px 0 rgba(238, 142, 188, 0.3);
     transform: scale(1.05);
 }
-.timetable .accent-orange-gradient {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, #eec08e, #dcee8e);
-    transition: 0.2s ease box-shadow, 0.2s ease transform;
-}
-.timetable .accent-orange-gradient:hover {
-    box-shadow: 0 20px 30px 0 rgba(238, 192, 142, 0.3);
-    transform: scale(1.05);
-}
-.timetable .accent-green-gradient {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, #bcee8e, #8eeea0);
-    transition: 0.2s ease box-shadow, 0.2s ease transform;
-}
-.timetable .accent-green-gradient:hover {
-    box-shadow: 0 20px 30px 0 rgba(188, 238, 142, 0.3);
-    transform: scale(1.05);
-}
-.timetable .accent-cyan-gradient {
-    display: flex;
-    width: 100%;
-    height: 100%;
+
+.accent-cyan-gradient {
     background: linear-gradient(135deg, #8eeec0, #8edcee);
-    transition: 0.2s ease box-shadow, 0.2s ease transform;
 }
-.timetable .accent-cyan-gradient:hover {
+
+.accent-cyan-gradient:hover {
+    background: linear-gradient(135deg, #8eeec0, #8edcee);
     box-shadow: 0 20px 30px 0 rgba(142, 238, 192, 0.3);
     transform: scale(1.05);
 }
-.timetable .accent-blue-gradient {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, #8ebcee, #a08eee);
-    transition: 0.2s ease box-shadow, 0.2s ease transform;
+
+.accent-orange-gradient {
+    background: linear-gradient(135deg, #eec08e, #dcee8e);
 }
-.timetable .accent-blue-gradient:hover {
+
+.accent-orange-gradient:hover {
+    background: linear-gradient(135deg, #eec08e, #dcee8e);
+    box-shadow: 0 20px 30px 0 rgba(238, 192, 142, 0.3);
+    transform: scale(1.05);
+}
+
+.accent-green-gradient {
+    background: linear-gradient(135deg, #bcee8e, #8eeea0);
+}
+
+.accent-green-gradient:hover {
+    background: linear-gradient(135deg, #bcee8e, #8eeea0);
+    box-shadow: 0 20px 30px 0 rgba(188, 238, 142, 0.3);
+    transform: scale(1.05);
+}
+
+.accent-blue-gradient {
+    background: linear-gradient(135deg, #8ebcee, #a08eee);
+}
+
+.accent-blue-gradient:hover {
+    background: linear-gradient(135deg, #8ebcee, #a08eee);
     box-shadow: 0 20px 30px 0 rgba(142, 188, 238, 0.3);
     transform: scale(1.05);
 }
-.timetable .accent-purple-gradient {
-    display: flex;
-    width: 100%;
-    height: 100%;
+
+.accent-purple-gradient {
     background: linear-gradient(135deg, #c08eee, #ee8edc);
-    transition: 0.2s ease box-shadow, 0.2s ease transform;
 }
-.timetable .accent-purple-gradient:hover {
+
+.accent-purple-gradient:hover {
+    background: linear-gradient(135deg, #c08eee, #ee8edc);
     box-shadow: 0 20px 30px 0 rgba(192, 142, 238, 0.3);
     transform: scale(1.05);
-}
-.timetable .weekend {
-    background: #fbfbfc;
-    color: #87a1ad;
-}
-.timetable .week-names {
-    grid-area: week;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    text-transform: uppercase;
-    font-size: 12px;
-}
-.timetable .week-names > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 1px 0 0 #ECEFF1;
-}
-.timetable .time-interval {
-    grid-area: time;
-    display: grid;
-    grid-template-rows: repeat(6, 1fr);
-    font-size: 14px;
-}
-.timetable .time-interval > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 0 1px 0 0 #ECEFF1;
-}
-.timetable .content {
-    grid-area: content;
-    display: grid;
-    grid-template-rows: repeat(6, 1fr);
-    grid-template-columns: repeat(7, 1fr);
-}
-.timetable .content > div {
-    box-shadow: inset 1px 0 0 #ECEFF1, inset 0 1px 0 0 #ECEFF1;
 }
